--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "type": "module",
-  "module": "dist/index.es.js",
+  "module": "dist/index.esm.js",
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
   "files": [
