--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mark-highlight",
   "version": "0.0.1",
-  "description": "",
+  "description": "一个简单的选择划线高亮工具",
   "type": "module",
   "module": "dist/index.esm.js",
   "main": "dist/index.cjs.js",
