--- a/examples/mark-vue-demo/package.json
+++ b/examples/mark-vue-demo/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mark-highlight": "^0.0.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
